# pls-readme

./: LICENSE  README.md  pyproject.toml
src/pls_readme/: cli.py  gitignore.py  heuristics.py  renderer_md.py  scanner.py  utils.py
