[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pls-readme"
version = "0.1.0"
description = "Generate a clean README.md draft for any local repository."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pathspec>=0.12.1"]

[project.scripts]
pls-readme = "pls_readme.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
